erDiagram
    %% AVEVA-PI Database ERD
    %% Generated: October 27, 2025

    %% Core Business Entities
    data_sources {
        TEXT id PK
        TEXT name
        TEXT plugin
        TEXT database_type
        TEXT config
        TEXT connection_status
        DATETIME last_tested_at
        TEXT test_status
        TEXT test_error_message
        BOOLEAN active
        DATETIME created_at
        DATETIME updated_at
    }

    triggers {
        TEXT id PK
        TEXT name
        TEXT type
        TEXT config
        BOOLEAN active
        TEXT data_source_id FK
        DATETIME created_at
        DATETIME updated_at
    }

    trigger_groups {
        TEXT id PK
        TEXT name
        TEXT description
        TEXT execution_mode
        DATETIME created_at
        DATETIME updated_at
    }

    trigger_group_members {
        INTEGER id PK
        TEXT group_id FK
        TEXT trigger_id FK
        DATETIME created_at
    }

    %% AI & Communication
    ai_triggers {
        TEXT id PK
        TEXT type
        TEXT prefix
        TEXT name
        TEXT description
        BOOLEAN enabled
        INTEGER usage_count
        DATETIME last_used
        DATETIME created_at
        DATETIME updated_at
    }

    whatsapp_status {
        INTEGER id PK
        BOOLEAN is_ready
        BOOLEAN is_initializing
        TEXT bot_number
        TEXT phone_number
        TEXT bot_id
        TEXT qr_data
        DATETIME last_update
        INTEGER reconnect_attempts
        DATETIME created_at
        DATETIME updated_at
    }

    messages {
        TEXT id PK
        TEXT type
        TEXT content
        TEXT sender
        TEXT recipient
        TEXT status
        DATETIME processed_at
        TEXT metadata
        DATETIME created_at
    }

    contacts {
        TEXT id PK
        TEXT name
        TEXT phone
        TEXT metadata
        DATETIME created_at
        DATETIME updated_at
    }

    outgoing_messages {
        INTEGER id PK
        TEXT recipient
        TEXT message
        TEXT type
        TEXT status
        DATETIME sent_at
        TEXT error_message
        INTEGER retry_count
        DATETIME created_at
    }

    %% Configuration & Settings
    query_presets {
        TEXT id PK
        TEXT name
        TEXT query_template
        TEXT variables
        BOOLEAN is_default
        INTEGER usage_count
        DATETIME created_at
        DATETIME updated_at
    }

    system_settings {
        TEXT id PK
        TEXT category
        TEXT key
        TEXT value
        DATETIME created_at
        DATETIME updated_at
    }

    %% Authentication & Security
    users {
        TEXT id PK
        TEXT username
        TEXT password_hash
        TEXT full_name
        TEXT email
        TEXT role
        TEXT created_by FK
        DATETIME created_at
        DATETIME last_login
        BOOLEAN is_active
        INTEGER login_attempts
        DATETIME locked_until
    }

    audit_logs {
        TEXT id PK
        TEXT user_id FK
        TEXT action
        TEXT details
        TEXT ip_address
        TEXT user_agent
        DATETIME timestamp
    }

    sessions {
        TEXT id PK
        TEXT user_id FK
        TEXT token_hash
        DATETIME expires_at
        DATETIME created_at
        TEXT ip_address
        TEXT user_agent
        BOOLEAN is_active
    }

    %% Relationships
    data_sources ||--o{ triggers : "has"
    triggers ||--o{ trigger_group_members : "belongs_to"
    trigger_groups ||--o{ trigger_group_members : "contains"
    users ||--o{ users : "created_by"
    users ||--o{ audit_logs : "generates"
    users ||--o{ sessions : "has"
```